[build-system]
requires = [
    "cmake",
    "ninja",
    "scikit-build",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*-musllinux*",  "pp*"]

[tool.cibuildwheel.macos]
archs = ["auto64", "universal2"]
