[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "kiss-icp"
version = "1.1.0"
description = "Simple yet effective 3D LiDAR-Odometry registration pipeline"
readme = "README.md"
authors = [
    { name = "Ignacio Vizzo", email = "ignaciovizzo@gmail.com" },
]
requires-python = ">=3.7"
keywords = [
    "LiDAR",
    "Localization",
    "Odometry",
    "SLAM",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "natsort",
    "numpy",
    "plyfile",
    "pydantic>=2",
    "pydantic-settings",
    "pyquaternion",
    "rich",
    "tqdm",
    "typer[all]>=0.6.0",
]

[project.optional-dependencies]
all = [
    "open3d>=0.13",
    "polyscope>=2.2.1",
    "ouster-sdk>=0.11",
    "pyntcloud",
    "PyYAML",
    "trimesh",
]
test = [
    "pytest",
]
visualizer = [
    "open3d>=0.13",
]

[project.scripts]
kiss_icp_pipeline = "kiss_icp.tools.cmd:run"
kiss_icp_dump_config = "kiss_icp.config.parser:write_config"

[project.urls]
Homepage = "https://github.com/PRBonn/kiss-icp"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.16"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
sdist.exclude = ["pybind/"]
wheel.install-dir = "kiss_icp/pybind/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*-musllinux*",  "pp*", "cp36-*"]

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=10.14"
archs = ["auto64", "arm64"]

[tool.pytest.ini_options]
testpaths = ['tests']
