[metadata]
name = kiss_icp
version = 0.2.9
author = Ignacio Vizzo
author_email = ignaciovizzo@gmail.com
description = Simple yet effective 3D LiDAR-Odometry registration pipeline
long_description = file:README.md,
long_description_content_type = text/markdown
url = https://github.com/PRBonn/kiss-icp
license = MIT
license_files = LICENSE
keywords  =  SLAM, LiDAR, Odometry, Localization,
classifiers  =
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Programming Language :: C++
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Other Audience
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
